inhaltsverzeichnis geaendert nach whatsapp

--- a/thesis.tex
+++ b/thesis.tex
@@ -124,8 +124,11 @@
 \cleardoubleoddpage	
 
 \setcounter{page}{1}
-\input{chapters/chapter1}
-\input{chapters/chapter2}
+\input{chapters/ch1_einleitung.tex}
+\input{chapters/ch2_theoretische_grundlagen.tex}
+
+
+
 \input{chapters/chapter3}
 \input{chapters/chapter4}
 \input{chapters/chapter5}
