--- a/thesis.tex
+++ b/thesis.tex
@@ -132,7 +132,7 @@
 \input{chapters/chapter3}
 \input{chapters/chapter4}
 \input{chapters/chapter5}
-\input{chapters/chapter6}
+\input{chapters/ch6_software.tex}
 \input{chapters/chapter7}
 %\input{chapters/chapter8}
 
