--- a/settings/graphics.tex
+++ b/settings/graphics.tex
@@ -1,5 +1,6 @@
 % graphics
 \usepackage{graphicx}
+%\usepackage{float}  %--- necessary??
 \graphicspath{ {images/} }
 \DeclareGraphicsExtensions{.pdf,.png,.jpg,.jpeg,.gif}
 
