--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -3,11 +3,42 @@
 @Source{VLInkManual,
   author  = {Microstrain},
   title   = {VLink200 Manual},
-  %date    = {2024-05-24},
+  %date    = {2025-02-20},
   editor  = {Microstrain},
   url     = {http://www.microstrain.com/sites/default/files/v-link-200_user_manual_8500-0063.pdf},
   urldate = {2025-02-23},
 }
+
+
+@Source{LearnChannel,
+  author  = {Learn Channel},
+  title   = {Wheatstone-DMS-Messbrucke-Viertel-Halb-Vollbrucke},
+  %date    = {2025-02-20},
+  editor  = {Learn Channel},
+  url     = {https://learnchannel-tv.com/wp-content/uploads/2020/12/Wheatstone-DMS-Messbrucke-Viertel-Halb-Vollbrucke-1024x423.png
+},
+  urldate = {2025-02-20},
+}
+
+
+@Source{KiCadWebsite,
+  author  = {KiCad},
+  title   = {KiCad Website},
+  %date    = {2025-02-20},
+  editor  = {KiCad},
+  url     = {http://kicad.org},
+  urldate = {2025-02-20},
+}
+
+@Source{Landuris,
+  author  = {Konstantin Landuris},
+  title   = {Landuris Website},
+  %date    = {2025-02-20},
+  editor  = {Konstantin Landuris},
+  url     = {https://www.landuris.com/},
+  urldate = {2025-02-20},
+}
+
 
 @Source{Riehle1999Framework,
   title={Framework Design: A Role Modeling Approach},
